# blub

./: .gitignore  CMakeLists.txt  Makefile  TODO.txt  blub.kdev4  compile.txt  run_windows.bat
.kdev4/: blub.kdev4
cmake/Modules/: FindSDL2.cmake  FindSDL_GPU.cmake
data/img/: .defaultTileset_BASE_9608.png.swp  .defaultTileset_LOCAL_9608.png.swp  .defaultTileset_REMOTE_9608.png.swp
data/img/tileset/: tilesets.json
data/map/chunks/: -1.-1.tdat  -1.-2.tdat  -1.-3.tdat  -1.0.tdat  -1.1.tdat  -1.2.tdat  -2.-1.tdat  -2.-2.tdat  -2.-3.tdat  -2.0.tdat  -2.1.tdat  -2.2.tdat  -3.-1.tdat  -3.-2.tdat  -3.-3.tdat  -3.0.tdat  -3.1.tdat  -3.2.tdat  -4.-1.tdat  -4.-2.tdat  -4.0.tdat  -4.1.tdat  -4.2.tdat  0.-1.tdat  0.-2.tdat  0.-3.tdat  0.0.tdat  0.1.tdat  0.2.tdat  1.-1.tdat  1.-2.tdat  1.-3.tdat  1.0.tdat  1.1.tdat  1.2.tdat  2.-1.tdat  2.-2.tdat  2.0.tdat  2.1.tdat  2.2.tdat
data/shader/: common.fs.glsl  common.vs.glsl  tile.fs.glsl  tile.vs.glsl
include/: controller.h
include/editor/: editor.h
include/game/: entity.h  filesystem.hpp  force.hpp  gamemath.hpp  generator.hpp  global.h  saveable.h  saveableInheritance.hpp  vector.hpp
include/game/entities/: camera.h  lightentity.h  physicsEntity.h  player.h  renderentity.h
include/logic/: chunk.h  map.h  map.tpp  model.h
include/renderer/: RenderEntity.h  ambientuniforms.h  animation.hpp  blub.h  cameraentry.h  coloredrect.h  lodimage.hpp  overlay.h  renderer.h  simplesprite.h  sprite.h
include/structs/: tile.h  tileset.h
src/: controller.cpp  main.cpp
src/editor/: editor.cpp
src/game/: entity.cpp  global.cpp  simplexnoise.cpp
src/game/entities/: camera.cpp  lightentity.cpp  physicsEntity.cpp  player.cpp  renderentity.cpp
src/logic/: chunk.cpp  map.cpp  model.cpp
src/renderer/: renderer.cpp  simplesprite.cpp
